k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: co2
  namespace: default
spec:
  selector:
    app: co2
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
